# opal

./: .clang-format  .editorconfig  .gitattributes  .gitignore  BINDINGS.md  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  README.md  SECURITY.md  THIRD_PARTY_LICENSES.md
.github/workflows/: android.yml  ios.yml  linux.yml  macos.yml  pages.yml  release.yml  windows.yml
cmake/: opalConfig.cmake.in
examples/: CMakeLists.txt
examples/common/miniaudio/: CMakeLists.txt
examples/common/miniaudio/src/: miniaudio.c
examples/player/: CMakeLists.txt
examples/player/src/: format_dro.c  format_dro.h  format_hsc.c  format_hsc.h  format_imf.c  format_imf.h  player.c  player_format.h
examples/web/: CMakeLists.txt  index.html
examples/web/src/: web.c
include/opal/: opal.h
music/: 02 Jazzpop Tune.hsc  03 Rocky Margarine.hsc  04 My Revenge.hsc  05 TRSI Techno Tune.hsc  06 Ad the Lib Groove.hsc  07 Still remember Rob.hsc  PUBLIC_DOMAIN_PROOF.txt  README.md
src/: CMakeLists.txt  opal.c
